--- a/cookie-frontend/public/index.html
+++ b/cookie-frontend/public/index.html
@@ -22,6 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="icon" type="image/x-icon" href="./img/cookie_favicon.ico">
     <title>cook.ie</title>
   </head>
   <body>
